--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <h3>HI👋 THERE!</h3>
     <h1>I'M <span>Gulrez Alam</span></h1>
-    <p>  I’m currently learning DSA and Web Development. Proficient in JAVA, JAVASCRIPT, Data Structures and Algorithms, C, CSS and HTML. Passionate about implementing and launching new projects. Ability to translate business requirements into technical solutions. Looking to start the career as an entry-level software engineer with a reputed firm driven by technology.
+    <p>  I’m currently learning DSA and Web Development. Proficient in JAVA, JAVASCRIPT, Data Structures and Algorithms, C, React-js, CSS and HTML. Passionate about implementing and launching new projects. Ability to translate business requirements into technical solutions. Looking to start the career as an entry-level software engineer with a reputed firm driven by technology.
     </p>
     <a href="#about"><button class="btn">About Me <i class="fas fa-user"></i></button></a>
 
